<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Base application theme. -->
    <string name="One" translatable="false">1</string>
    <string name="Two" translatable="false">2</string>
    <string name="Three" translatable="false">3</string>
    <string name="Four" translatable="false">4</string>
    <string name="Five" translatable="false">5</string>
    <string name="Six" translatable="false">6</string>
    <string name="Seven" translatable="false">7</string>
    <string name="Eight" translatable="false">8</string>
    <string name="Nine" translatable="false">9</string>
    <string name="Ten" translatable="false">10</string>
    <string name="KidsLearningApp" translatable="false">Math Time</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="Counting" translatable="false">Learn Counting</string>
    <string name="Learn" translatable="false">Learn</string>
    <string name="Quiz" translatable="false">Quiz</string>
    <string name="Time" translatable="false">30 s</string>
    <string name="Score" translatable="false">0/0</string>
    <string name="QuestionText" translatable="false">How many?</string>
    <string name="time_s_up">Time\'s Up!!</string>
    <string name="your_score">Your Score</string>


</resources>