<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

  <ImageView
      android:id="@+id/imageView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:contentDescription="@string/todo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/bg1" />

  <Button
      android:id="@+id/six_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="45dp"
      android:layout_marginEnd="28dp"
      android:layout_marginBottom="32dp"
      android:background="@drawable/six_btn"
      android:text="@string/Six"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toTopOf="@+id/nine_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/five_button" />

  <Button
      android:id="@+id/five_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="44dp"
      android:layout_marginBottom="32dp"
      android:background="@drawable/five_btn"
      android:text="@string/Five"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toTopOf="@+id/eight_button"
      app:layout_constraintStart_toEndOf="@+id/four_button" />

  <Button
      android:id="@+id/three_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="45dp"
      android:layout_marginEnd="28dp"
      android:layout_marginBottom="32dp"
      android:background="@drawable/three_btn"
      android:text="@string/Three"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toTopOf="@+id/six_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/two_button" />

  <Button
      android:id="@+id/four_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="36dp"
      android:layout_marginBottom="32dp"
      android:background="@drawable/four_btn"
      android:text="@string/Four"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toTopOf="@+id/seven_button"
      app:layout_constraintStart_toStartOf="@+id/imageView13"
      tools:ignore="TextContrastCheck" />

  <Button
      android:id="@+id/two_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="44dp"
      android:layout_marginBottom="28dp"
      android:background="@drawable/two_btn"
      android:text="@string/Two"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toTopOf="@+id/five_button"
      app:layout_constraintStart_toEndOf="@+id/one_button" />

  <Button
      android:id="@+id/one_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="36dp"
      android:layout_marginBottom="28dp"
      android:background="@drawable/one_btn"
      android:text="@string/One"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toTopOf="@+id/four_button"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/seven_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="36dp"
      android:layout_marginBottom="244dp"
      android:background="@drawable/seven_btn"
      android:text="@string/Seven"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/eight_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="44dp"
      android:layout_marginBottom="28dp"
      android:background="@drawable/eight_btn"
      android:text="@string/Eight"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toTopOf="@+id/ten_button"
      app:layout_constraintStart_toEndOf="@+id/seven_button" />

  <Button
      android:id="@+id/nine_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="28dp"
      android:layout_marginBottom="244dp"
      android:background="@drawable/nine_btn"
      android:text="@string/Nine"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <Button
      android:id="@+id/ten_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="156dp"
      android:background="@drawable/ten_btn"
      android:text="@string/Ten"
      android:textColor="@android:color/white"
      android:textSize="45sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.52"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="152dp"
      android:background="@color/white"
      android:backgroundTint="#AAE391"
      android:backgroundTintMode="multiply"
      android:fontFamily="sans-serif-smallcaps"
      android:fontFeatureSettings="@string/Counting"
      android:hapticFeedbackEnabled="false"
      android:includeFontPadding="false"
      android:soundEffectsEnabled="false"
      android:text="@string/Counting"
      android:textColor="@color/counting"
      android:textSize="45sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.698"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView13" />
</androidx.constraintlayout.widget.ConstraintLayout>